背景图默认铺满屏幕

--- a/apps/auth/views/login.liquid
+++ b/apps/auth/views/login.liquid
@@ -16,6 +16,7 @@
       background-image: url("{{ backgroundImagePath }}");
       background-repeat: no-repeat;
       background-color: {{ backgroundFallbackColor }};
+      background-size: cover;
     }
     .button-primary {
         background-color: #9a0000;
