fix: logo点击仍会打开新窗口

--- a/apps/auth/views/login.liquid
+++ b/apps/auth/views/login.liquid
@@ -30,7 +30,7 @@
 
 <body style="font-family:Roboto">
     <div class="fixed top-6 left-24">
-      <a href="{{ logoLink }}" target="_blank">
+      <a href="{{ logoLink }}" target="_blank" onclick="return false;">
         <img class="w-40" src="{{ logoUrl }}" alt="logo">
       </a>
     </div>
