fix:英文label太长和placeholder、文字显示不全

--- a/apps/auth/views/login.liquid
+++ b/apps/auth/views/login.liquid
@@ -122,7 +122,7 @@
           {% endif %}
         </div>
       </div>
-      <div class="w-1/2 h-screen pl-48 pb-28 flex justify-center flex-col hidden-xs">
+      <div class="w-1/2 h-screen pl-48 flex justify-center flex-col hidden-xs">
           <div class="text-4xl font-semibold mb-12"  style="color: {{ sloganColor }}">{{ sloganTitle }}</div>
           {% for sloganText in sloganTextArr %}
             <div class="text-2xl mb-8"  style="color: {{ sloganColor }}">{{ sloganText }}</div>
