--- a/apps/auth/views/otp/qrcode.liquid
+++ b/apps/auth/views/otp/qrcode.liquid
@@ -4,5 +4,5 @@
   <input
     type="hidden"
     name="callbackUrl"
-    value="{{ callbackUrl }}">
+    value="{{ callbackUrl | escape }}">
 </div>
