--- a/apps/ai-web/src/styles/globals.css
+++ b/apps/ai-web/src/styles/globals.css
@@ -1,12 +1,7 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 @layer base {
-  body {
-    height: 100vh;
-    background-color: rgb(31 41 55);
-    color: #fff;
-    padding: 0 32px;
-  }
+
 }
